test/functions/operatorOverloads/errors/namedOperator2.bad
namedOperator2.chpl:9: error: unresolved call 'R.foo()'
namedOperator2.chpl:2: note: this candidate did not match: R.foo()
namedOperator2.chpl:9: note: because call includes 0 arguments
namedOperator2.chpl:2: note: but function can only accept 0 arguments
